sumo/tests/duarouter/errors/network/edge/cedge/root__edge__cedge#id__empty1/errors.duarouter
Error: At edge '1': succeding edge '' does not exist.
Quitting (on error).
